@@ -20,7 +20,6 @@
 package org.nuxeo.ecm.automation.core.operations.document;
 
 import static java.util.Calendar.SEPTEMBER;
-import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.number.OrderingComparison.greaterThan;
 import static org.junit.Assert.assertEquals;
@@ -32,7 +31,6 @@ import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
-import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.GregorianCalendar;
@@ -127,8 +125,8 @@ public class AddPermissionTest {
         assertNull(doc.getACP().getACL("local"));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, null, null, "Write", null, null, null, false,
-                false, null);
+        Map<String, Object> params = getParametersForAddOperation(null, null, "Write", null, null, null, false, false,
+                null);
 
         try {
             automationService.run(ctx, AddPermission.ID, params);
@@ -147,8 +145,8 @@ public class AddPermissionTest {
         assertNull(doc.getACP().getACL("local"));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, null, "johndoe@nuxeo.com", "Write", null, null,
-                null, false, false, null);
+        Map<String, Object> params = getParametersForAddOperation(null, "johndoe@nuxeo.com", "Write", null, null, null,
+                false, false, null);
 
         try {
             automationService.run(ctx, AddPermission.ID, params);
@@ -166,15 +164,15 @@ public class AddPermissionTest {
         assertNotNull(doc.getACP());
         assertNull(doc.getACP().getACL("local"));
 
-        List<String> users = Arrays.asList("existingGroup", "unexistingUser", "existingUser", "unexistingUser2");
+        List<String> users = List.of("existingGroup", "unexistingUser", "existingUser", "unexistingUser2");
         when(userManager.getUserModel("existingUser")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
         when(userManager.getGroupModel("existingGroup")).thenReturn(SimpleDocumentModel.ofSchemas("group"));
         when(userManager.getUserModel("unexistingUser")).thenReturn(null);
         when(userManager.getUserModel("unexistingUser2")).thenReturn(null);
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, users, null, "Write", null, null, null, false,
-                false, null);
+        Map<String, Object> params = getParametersForAddOperation(users, null, "Write", null, null, null, false, false,
+                null);
 
         try {
             automationService.run(ctx, AddPermission.ID, params);
@@ -197,14 +195,14 @@ public class AddPermissionTest {
         assertNotNull(doc.getACP());
         assertNull(doc.getACP().getACL("local"));
 
-        List<String> users = Arrays.asList("existingGroup", "unexistingGroup", "existingUser");
+        List<String> users = List.of("existingGroup", "unexistingGroup", "existingUser");
         when(userManager.getUserModel("existingUser")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
         when(userManager.getGroupModel("existingGroup")).thenReturn(SimpleDocumentModel.ofSchemas("group"));
         when(userManager.getGroupModel("unexistingGroup")).thenReturn(null);
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, users, null, "Write", null, null, null, false,
-                false, null);
+        Map<String, Object> params = getParametersForAddOperation(users, null, "Write", null, null, null, false, false,
+                null);
 
         try {
             automationService.run(ctx, AddPermission.ID, params);
@@ -228,8 +226,8 @@ public class AddPermissionTest {
         ctx.setInput(doc);
         List<String> users = List.of("foo");
         String invalidPermission = "<a href=www.evil.com>New";
-        Map<String, Object> params = getParametersForAddOperation(null, users, null, invalidPermission, null, null,
-                null, false, false, null);
+        Map<String, Object> params = getParametersForAddOperation(users, null, invalidPermission, null, null, null,
+                false, false, null);
         try {
             automationService.run(ctx, AddPermission.ID, params);
             fail(String.format("Calling %s with an invalid permission %s should fail.", AddPermission.ID,
@@ -249,8 +247,8 @@ public class AddPermissionTest {
         when(userManager.getUserModel("unexistingUser")).thenReturn(null);
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, singletonList("unexistingUser"), null, "Write",
-                "", null, null, false, false, null);
+        Map<String, Object> params = getParametersForAddOperation(List.of("unexistingUser"), null, "Write", "", null,
+                null, false, false, null);
 
         automationService.run(ctx, AddPermission.ID, params);
         verifyNoInteractions(userManager);
@@ -269,11 +267,11 @@ public class AddPermissionTest {
         assertNotNull(doc.getACP());
         assertNull(doc.getACP().getACL("local"));
 
-        List<String> groups = Arrays.asList("unexistingGroup1", "unexistingGroup2");
+        List<String> groups = List.of("unexistingGroup1", "unexistingGroup2");
         groups.forEach(group -> when(userManager.getGroupModel(group)).thenReturn(null));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, groups, null, "Read", null,
+        Map<String, Object> params = getParametersForAddOperation(groups, null, "Read", null,
                 new GregorianCalendar(2018, SEPTEMBER, 2), new GregorianCalendar(2018, SEPTEMBER, 8), false, true,
                 "Permission Given");
 
@@ -297,7 +295,7 @@ public class AddPermissionTest {
         when(userManager.getUserModel("existingUser")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation("existingUser", null, null, "Read", null,
+        Map<String, Object> params = getParametersForAddOperation(List.of("existingUser"), null, "Read", null,
                 new GregorianCalendar(2018, SEPTEMBER, 2), new GregorianCalendar(2018, SEPTEMBER, 8), false, false,
                 null);
 
@@ -320,7 +318,7 @@ public class AddPermissionTest {
         assertNull(doc.getACP().getACL("local"));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, null, "jane@nuxeo.com", "Write", null, null,
+        Map<String, Object> params = getParametersForAddOperation(null, "jane@nuxeo.com", "Write", null, null,
                 new GregorianCalendar(2018, SEPTEMBER, 8), false, false, null);
 
         automationService.run(ctx, AddPermission.ID, params);
@@ -340,14 +338,14 @@ public class AddPermissionTest {
         assertNotNull(doc.getACP());
         assertNull(doc.getACP().getACL("local"));
 
-        List<String> users = Arrays.asList("existingUser2", "existingUser3");
+        List<String> users = List.of("existingUser1", "existingUser2", "existingUser3");
         when(userManager.getUserModel("existingUser1")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
         when(userManager.getUserModel("existingUser2")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
         when(userManager.getUserModel("existingUser3")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation("existingUser1", users, null, "Write", null, null,
-                null, false, false, null);
+        Map<String, Object> params = getParametersForAddOperation(users, null, "Write", null, null, null, false, false,
+                null);
 
         automationService.run(ctx, AddPermission.ID, params);
 
@@ -371,12 +369,12 @@ public class AddPermissionTest {
         assertNotNull(doc.getACP());
         assertNull(doc.getACP().getACL("local"));
 
-        List<String> users = Arrays.asList("existingUser1", "existingUser2");
+        List<String> users = List.of("existingUser1", "existingUser2");
         when(userManager.getUserModel("existingUser1")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
         when(userManager.getUserModel("existingUser2")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, users, "user@nuxeo.com", "Write", null, null,
+        Map<String, Object> params = getParametersForAddOperation(users, "user@nuxeo.com", "Write", null, null,
                 new GregorianCalendar(2018, SEPTEMBER, 8), false, false, null);
 
         automationService.run(ctx, AddPermission.ID, params);
@@ -402,7 +400,7 @@ public class AddPermissionTest {
         when(userManager.getUserModel("existingUser1")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation("existingUser1", null, "user@nuxeo.com", "Write",
+        Map<String, Object> params = getParametersForAddOperation(List.of("existingUser1"), "user@nuxeo.com", "Write",
                 null, null, new GregorianCalendar(2018, SEPTEMBER, 8), false, false, null);
 
         automationService.run(ctx, AddPermission.ID, params);
@@ -423,13 +421,13 @@ public class AddPermissionTest {
         assertNotNull(doc.getACP());
         assertNull(doc.getACP().getACL("local"));
 
-        when(administratorGroupsProvider.getAdministratorsGroups()).thenReturn(singletonList("administrators"));
+        when(administratorGroupsProvider.getAdministratorsGroups()).thenReturn(List.of("administrators"));
 
         when(userManager.getUserModel("existingUser1")).thenReturn(SimpleDocumentModel.ofSchemas("user"));
 
         ctx.setInput(doc);
-        Map<String, Object> params = getParametersForAddOperation(null, singletonList("existingUser1"), null, "Write",
-                null, null, new GregorianCalendar(2018, SEPTEMBER, 8), true, false, null);
+        Map<String, Object> params = getParametersForAddOperation(List.of("existingUser1"), null, "Write", null, null,
+                new GregorianCalendar(2018, SEPTEMBER, 8), true, false, null);
 
         automationService.run(ctx, AddPermission.ID, params);
 
@@ -446,7 +444,7 @@ public class AddPermissionTest {
     @Test
     public void shouldAddPermissionForUsersWhenUsingChainExtension() throws OperationException {
         // Mock the users params
-        List<String> users = Arrays.asList("jchastain", "rdeniro", "dwashington");
+        List<String> users = List.of("jchastain", "rdeniro", "dwashington");
         users.forEach(user -> when(userManager.getUserModel(user)).thenReturn(SimpleDocumentModel.ofSchemas(user)));
 
         DocumentModel doc = session.getDocument(new PathRef("/src"));
@@ -483,21 +481,17 @@ public class AddPermissionTest {
     }
 
     protected void verifyUserOrGroup(String userOrGroup, String expectedToBeFindAs) {
-        switch (expectedToBeFindAs) {
-            case USER:
-                verify(userManager).getUserModel(userOrGroup);
-                break;
-            default:
-                verify(userManager).getUserModel(userOrGroup);
-                verify(userManager).getGroupModel(userOrGroup);
+        if (USER.equals(expectedToBeFindAs)) {
+            verify(userManager).getUserModel(userOrGroup);
+        } else {
+            verify(userManager).getUserModel(userOrGroup);
+            verify(userManager).getGroupModel(userOrGroup);
         }
     }
 
-    protected Map<String, Object> getParametersForAddOperation(String user, List<String> users, String email,
-            String permission, String aclName, Calendar begin, Calendar end, boolean blockInheritance, boolean notify,
-            String comment) {
+    protected Map<String, Object> getParametersForAddOperation(List<String> users, String email, String permission,
+            String aclName, Calendar begin, Calendar end, boolean blockInheritance, boolean notify, String comment) {
         Map<String, Object> params = new HashMap<>();
-        params.put("user", user);
         params.put("users", users);
         params.put("email", email);
         params.put("permission", permission);
